manifests/vpc-lattice.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-application-networking-system
