manifests/pod-identity-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-identity-sample-deployment
  annotations:
    deployNodeClass: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-identity-sample
  template:
    metadata:
      labels:
        app: pod-identity-sample
    spec:
      serviceAccountName: pod-identity-sample
      nodeSelector:
        deployNodeClass: default
        kubernetes.io/arch: amd64
      containers:
        - name: pod-identity-sample
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-northeast-1.amazonaws.com/pod-identity-sample:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pod-identity-sample-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: pod-identity-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
