manifests/ingress-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-sample-deployment
  annotations:
    deployNodeClass: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-sample
  template:
    metadata:
      labels:
        app: ingress-sample
    spec:
      nodeSelector:
        deployNodeClass: default
      containers:
        - name: ingress-sample
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-sample-service
spec:
  selector:
    app: ingress-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-sample-service
                port:
                  number: 80
